--- a/index.html
+++ b/index.html
@@ -24,31 +24,35 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Disabled</a>
+              <a class="nav-link" aria-disabled="true">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Disabled</a>
+              <a class="nav-link" aria-disabled="true">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Disabled</a>
+              <a class="nav-link" aria-disabled="true">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Disabled</a>
+              <a class="nav-link" aria-disabled="true">Blog</a>
             </li>
           </ul>
+          <div class="nav-bar-button">
+            <a>Contact us</a>
+          </div>
         </div>
       </div>
     </nav>
-    <!--========================Hero Section===========================-->
 
+    <!--========================Hero Section===========================-->
+    <button type="button" class="btn btn-primary">Primary</button>
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
