--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!--========================Nav Bar section===========================-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="#">{finsweet</a>
+        <a class="navbar-brand" href="#"
+          ><img src="./images/main-logo.png" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,7 +46,7 @@
               <a class="nav-link" aria-disabled="true">Blog</a>
             </li>
           </ul>
-          <div class="nav-bar-button">
+          <div class="button">
             <a>Contact us</a>
           </div>
         </div>
