--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CIT-Project-2</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!--========================Nav Bar section===========================-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#"
           ><img src="./images/main-logo.png" alt=""
@@ -28,33 +37,33 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Features</a>
+              <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Pricing</a>
+              <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">FAQ</a>
+              <a class="nav-link" href="#">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true">Blog</a>
+              <a class="nav-link" href="#">Blog</a>
             </li>
           </ul>
-          <div class="button">
-            <a>Contact us</a>
+          <div class="navbar-button">
+            <a href="">Contact us</a>
           </div>
         </div>
       </div>
     </nav>
 
     <!--========================Hero Section===========================-->
-    <button type="button" class="btn btn-primary">Primary</button>
+
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
