--- a/index.html
+++ b/index.html
@@ -94,6 +94,28 @@
         </div>
       </div>
     </section>
+    <!--========================Work Section===========================-->
+    <section class="work">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5">
+            <div class="common-title">
+              <h2>How we work</h2>
+              <p>
+                <span>Lorem ipsum dolor sit amet, consectetur</span>adipiscing
+                elit, sed do eiusmod tempor.
+              </p>
+              <a href=""
+                >Get in touch with us &nbsp;&nbsp;<i
+                  class="fa-solid fa-arrow-right-long"
+                ></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-lg-7"></div>
+        </div>
+      </div>
+    </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
