work part complete

--- a/index.html
+++ b/index.html
@@ -112,7 +112,52 @@
               ></a>
             </div>
           </div>
-          <div class="col-lg-7"></div>
+          <div class="col-lg-7 d-flex flex-wrap">
+            <div>
+              <div class="buttons">
+                <h3 class="button"></h3>
+                <h3 class="number">01</h3>
+              </div>
+              <h2>Strategy</h2>
+              <p>
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+                aliquam .
+              </p>
+            </div>
+            <div>
+              <div class="buttons">
+                <h3 class="button"></h3>
+                <h3 class="number">02</h3>
+              </div>
+              <h2>Wireframing</h2>
+              <p>
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+                aliquam .
+              </p>
+            </div>
+            <div>
+              <div class="buttons">
+                <h3 class="button"></h3>
+                <h3 class="number">03</h3>
+              </div>
+              <h2>Design</h2>
+              <p>
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+                aliquam .
+              </p>
+            </div>
+            <div>
+              <div class="buttons">
+                <h3 class="button"></h3>
+                <h3 class="number">04</h3>
+              </div>
+              <h2>Development</h2>
+              <p>
+                Euismod faucibus turpis eu gravida mi. Pellentesque et velit
+                aliquam .
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
