Update with grid

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
               ></a>
             </div>
           </div>
-          <div class="col-lg-7 d-flex flex-wrap">
+          <div class="col-lg-7">
+            <!-- d-flex flex-wrap-->
             <div>
               <div class="buttons">
                 <h3 class="button"></h3>
