--- a/index.html
+++ b/index.html
@@ -162,6 +162,34 @@
         </div>
       </div>
     </section>
+    <!--========================Project Section===========================-->
+    <section class="project">
+      <div class="container">
+        <div
+          class="d-flex common-title align-items-center justify-content-between"
+        >
+          <h2>View our projects</h2>
+          <a href=""
+            >Get in touch with us &nbsp;&nbsp;<i
+              class="fa-solid fa-arrow-right-long"
+            ></i
+          ></a>
+        </div>
+        <div class="row">
+          <div class="col-lg-8">fdlkf</div>
+          <div class="col-lg-4">fddh</div>
+        </div>
+      </div>
+    </section>
+    <!--========================Project Section===========================-->
+    <section class="project">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">fdlkf</div>
+          <div class="col-lg-4">fddh</div>
+        </div>
+      </div>
+    </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
