--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
         </div>
       </div>
     </section>
+
     <!--========================Project Section===========================-->
-    <section class="project">
+    <section class="projects">
       <div class="container">
         <div
-          class="d-flex common-title align-items-center justify-content-between"
+          class="projects-header d-flex common-title align-items-center justify-content-between"
         >
           <h2>View our projects</h2>
           <a href=""
@@ -176,8 +177,13 @@
           ></a>
         </div>
         <div class="row">
-          <div class="col-lg-8">fdlkf</div>
-          <div class="col-lg-4">fddh</div>
+          <div class="col-lg-8">
+            <img class="img-fluid" src="./images/project/pro-1.png" alt="" />
+          </div>
+          <div class="col-lg-4 d-flex flex-column gap-5">
+            <img class="img-fluid" src="./images/project/pro-2.png" alt="" />
+            <img class="img-fluid" src="./images/project/pro-3.png" alt="" />
+          </div>
         </div>
       </div>
     </section>
