project section complete

--- a/index.html
+++ b/index.html
@@ -179,23 +179,53 @@
         <div class="row">
           <div class="col-lg-8">
             <img class="img-fluid" src="./images/project/pro-1.png" alt="" />
+            <div class="overlay d-flex flex-column">
+              <h3>Workhub office Webflow Webflow Design</h3>
+              <div class="common-title">
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+                </p>
+
+                <a href=""
+                  >View Pricing &nbsp;&nbsp;<i
+                    class="fa-solid fa-arrow-right-long"
+                  ></i
+                ></a>
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 d-flex flex-column gap-5">
-            <img class="img-fluid" src="./images/project/pro-2.png" alt="" />
-            <img class="img-fluid" src="./images/project/pro-3.png" alt="" />
+            <div class="side-img">
+              <img class="img-fluid" src="./images/project/pro-2.png" alt="" />
+              <div class="overlay d-flex flex-column">
+                <h3><span>Unisaas Website</span> Design</h3>
+                <div class="common-title">
+                  <a href=""
+                    >View portfolio &nbsp;&nbsp;<i
+                      class="fa-solid fa-arrow-right-long"
+                    ></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+            <div class="side-img">
+              <img class="img-fluid" src="./images/project/pro-3.png" alt="" />
+              <div class="overlay d-flex flex-column">
+                <h3><span>Unisaas Website</span> Design</h3>
+                <div class="common-title">
+                  <a href=""
+                    >View portfolio &nbsp;&nbsp;<i
+                      class="fa-solid fa-arrow-right-long"
+                    ></i
+                  ></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!--========================Project Section===========================-->
-    <section class="project">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8">fdlkf</div>
-          <div class="col-lg-4">fddh</div>
-        </div>
-      </div>
-    </section>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
