update fetures part

--- a/index.html
+++ b/index.html
@@ -225,7 +225,72 @@
         </div>
       </div>
     </section>
-    <!--========================Project Section===========================-->
+    <!--========================features Section===========================-->
+    <section class="features">
+      <div class="container d-flex flex-column justify-content-center">
+        <div class="common-title">
+          <h4>features</h4>
+          <h2>
+            <span>Design that solves</span><span>problems, one product at</span> a time
+          </h2>
+        </div>
+        <div class="row g-4">
+          <div class="col-lg-4">
+            <div class="feature">
+              <img src="./images/icons/icon-1.png" alt="">
+              <h3>Uses Client First</h3>
+              <p>
+                <span>Euismod faucibus turpis eu gravida mi.</span> <span>Pellentesque et velit aliquam sed faucib</span> <span>turpis eu gravida mi. Pellentesque et</span> velit aliquam sed mi. 
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="feature">
+              <img src="./images/icons/icon-2.png" alt="">
+              <h3>Two Free Revision Round</h3>
+              <p>
+                <span>Euismod faucibus turpis eu gravida mi.</span> <span>Pellentesque et velit aliquam sed faucib</span> <span>turpis eu gravida mi. Pellentesque et</span> velit aliquam sed mi.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="feature">
+              <img src="./images/icons/icon-3.png" alt="">
+              <h3>Template Customization</h3>
+              <p>
+                <span>Euismod faucibus turpis eu gravida mi.</span> <span>Pellentesque et velit aliquam sed faucib</span> <span>turpis eu gravida mi. Pellentesque et</span> velit aliquam sed mi. 
+              </p>
+            </div>
+          </div> 
+          <div class="col-lg-4">
+            <div class="feature">
+              <img src="./images/icons/icon-4.png" alt="">
+              <h3>24/7 Support</h3>
+              <p>
+                <span>Euismod faucibus turpis eu gravida mi.</span> <span>Pellentesque et velit aliquam sed faucib</span> <span>turpis eu gravida mi. Pellentesque et</span> velit aliquam sed mi. 
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="feature">
+              <img src="./images/icons/icon-5.png" alt="">
+              <h3>Quick Delivery</h3>
+              <p>
+                <span>Euismod faucibus turpis eu gravida mi.</span> <span>Pellentesque et velit aliquam sed faucib</span> <span>turpis eu gravida mi. Pellentesque et</span> velit aliquam sed mi. 
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="feature">
+              <img src="./images/icons/icon-6.png" alt="">
+              <h3>Hands-on approach</h3>
+              <p>
+                <span>Euismod faucibus turpis eu gravida mi.</span> <span>Pellentesque et velit aliquam sed faucib</span> <span>turpis eu gravida mi. Pellentesque et</span> velit aliquam sed mi. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
