--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <section class="features">
       <div class="container d-flex flex-column justify-content-center">
         <div class="common-title">
-          <h4>features</h4>
+          <h4>Features</h4>
           <h2>
             <span>Design that solves</span
             ><span>problems, one product at</span> a time
@@ -306,6 +306,56 @@
                 <span>turpis eu gravida mi. Pellentesque et</span> velit aliquam
                 sed mi.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--========================clients Section===========================-->
+    <section class="clients">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="common-title">
+              <h3><span>What our clients</span> say about us</h3>
+              <p>
+                <span>Lorem ipsum dolor sit amet, consectetur</span> adipiscing
+                elit sed.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="common-title">
+              <h3>
+                <span>"The best agency we’ve worked with so far. They </span>
+                <span>understand our product and are able to add new</span>
+                features with a great focus."
+              </h3>
+              <div
+                class="autoer d-flex justify-content-between align-items-center"
+              >
+                <div class="autoer-content d-flex align-items-center gap-2">
+                  <img src="./images/clients/women.png" alt="" />
+                  <div class="d-flex flex-column">
+                    <h3 class="author-name mb-0">Jenny Wilson</h3>
+                    <p class="auther-position mb-0 text-muted">
+                      Vice President
+                    </p>
+                  </div>
+                </div>
+                <div class="slider d-flex gap-4">
+                  <div
+                    class="icon-box d-flex justify-content-center align-items-center"
+                  >
+                    <i class="fa-solid fa-angle-left text-white"></i>
+                  </div>
+                  <div
+                    class="icon-box d-flex justify-content-center align-items-center"
+                  >
+                    <i class="fa-solid fa-angle-right text-white"></i>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
