client section completed

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <section class="features">
       <div class="container d-flex flex-column justify-content-center">
         <div class="common-title">
-          <h4>Features</h4>
+          <h4>features</h4>
           <h2>
             <span>Design that solves</span
             ><span>problems, one product at</span> a time
