blog section almost done

--- a/index.html
+++ b/index.html
@@ -361,102 +361,145 @@
         </div>
       </div>
     </section>
-    <!--========================FAQ Section===========================-->
+    <!--========================FAQ Section===============================-->
     <section class="faq">
       <div class="container">
-        <div class="col-md-4"><h2>Frequently asked questions</h2></div>
-        <div class="col-md-4">
-          <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button
-                  class="accordion-button"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseOne"
-                  aria-expanded="true"
-                  aria-controls="collapseOne"
+        <div class="row">
+          <div class="col-lg-4">
+            <h2>Frequently asked questions</h2>
+            <div class="common-title">
+              <a href=""
+                >Contact us for more info &nbsp;&nbsp;<i
+                  class="fa-solid fa-arrow-right-long"
+                ></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="true"
+                    aria-controls="collapseOne"
+                  >
+                    <span>01</span>How much time does it take?
+                  </button>
+                </h2>
+                <div
+                  id="collapseOne"
+                  class="accordion-collapse collapse show"
+                  data-bs-parent="#accordionExample"
                 >
-                  Accordion Item #1
-                </button>
-              </h2>
-              <div
-                id="collapseOne"
-                class="accordion-collapse collapse show"
-                data-bs-parent="#accordionExample"
-              >
-                <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It
-                  is shown by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo"
-                  aria-expanded="false"
-                  aria-controls="collapseTwo"
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo"
+                  >
+                    <span>02</span>What is your class naming convention?
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
                 >
-                  Accordion Item #2
-                </button>
-              </h2>
-              <div
-                id="collapseTwo"
-                class="accordion-collapse collapse"
-                data-bs-parent="#accordionExample"
-              >
-                <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#collapseThree"
-                  aria-expanded="false"
-                  aria-controls="collapseThree"
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    <span>03</span>How do you communicate?
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
                 >
-                  Accordion Item #3
-                </button>
-              </h2>
-              <div
-                id="collapseThree"
-                class="accordion-collapse collapse"
-                data-bs-parent="#accordionExample"
-              >
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It
-                  is hidden by default, until the collapse plugin adds the
-                  appropriate classes that we use to style each element. These
-                  classes control the overall appearance, as well as the showing
-                  and hiding via CSS transitions. You can modify any of this
-                  with custom CSS or overriding our default variables. It's also
-                  worth noting that just about any HTML can go within the
-                  <code>.accordion-body</code>, though the transition does limit
-                  overflow.
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFour"
+                    aria-expanded="false"
+                    aria-controls="collapseFour"
+                  >
+                    <span>04</span>I have a bigger project. Can you handle it?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFour"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseFive"
+                    aria-expanded="false"
+                    aria-controls="collapseFive"
+                  >
+                    <span>05</span>What is your class naming convention?
+                  </button>
+                </h2>
+                <div
+                  id="collapseFive"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </div>
                 </div>
               </div>
             </div>
@@ -464,6 +507,193 @@
         </div>
       </div>
     </section>
+    <!--========================FAQ Section===============================-->
+    <section class="stellar">
+      <div class="container">
+        <div class="content_container">
+          <img src="./images/stellar/banner-2.png" alt="" />
+          <div class="overly">
+            <h2 class="title">
+              <span>Building stellar</span> <span>websites for</span> early
+              startups
+            </h2>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua ut
+              enim.
+            </p>
+          </div>
+        </div>
+        <div class="inquiry_input">
+          <h4 class="sub-title">Send inquiry</h4>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore.
+          </p>
+
+          <form action="" class="col-auto">
+            <input
+              type="text"
+              class="form-inputs"
+              id="inputPassword2"
+              placeholder="Your Name"
+            />
+            <input
+              type="email"
+              class="form-inputs"
+              id="inputPassword2"
+              placeholder="Email"
+            />
+            <input
+              type="password"
+              class="form-inputs"
+              id="inputPassword2"
+              placeholder="Password"
+            />
+            <div class="navbar-button">
+              <a class="" href="">Send an inquiry</a>
+            </div>
+            <div class="common-title">
+              <a href=""
+                >Get in touch with us &nbsp;&nbsp;<i
+                  class="fa-solid fa-arrow-right-long"
+                ></i
+              ></a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!--========================blog Section===========================-->
+     <section class="our_blog">
+      <div class="container">
+        <h2 class="title">Our Blog</h2>
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="./images/blog/blog.png" alt="">
+            <p class="date">19 Jan 2022</p>
+            <h4 class="sub_title"><span>How one Webflow user grew his</span><span> single person consultancy from</span> $0-100K in 14 months</h4>
+            <p class="description">See how pivoting to Webflow changed one person’s sales strategy and allowed him to
+              attract</p>
+              
+              <div class="common-title">
+                <a href=""
+                  >Read More &nbsp;&nbsp;<i
+                    class="fa-solid fa-arrow-right-long"
+                  ></i
+                ></a>
+              </div>
+          </div>
+          <div class="col-lg-4">
+            <img src="./images/blog/blog-2.png" alt="">
+            <p class="date">19 Jan 2022</p>
+            <h4 class="sub_title">How one Webflow user grew his single person consultancy from $0-100K in 14 months</h4>
+            <p class="description">See how pivoting to Webflow changed one person’s sales strategy and allowed him to
+              attract</p>
+              <div class="common-title">
+                <a href=""
+                  >Read More &nbsp;&nbsp;<i
+                    class="fa-solid fa-arrow-right-long"
+                  ></i
+                ></a>
+              </div>
+          </div>
+          <div class="col-lg-4">
+            <img src="./images/blog/blog-3.png" alt="">
+            <p class="date">19 Jan 2022</p>
+            <h4 class="sub_title">How one Webflow user grew his single person consultancy from $0-100K in 14 months</h4>
+            <p class="description">See how pivoting to Webflow changed one person’s sales strategy and allowed him to
+              attract</p>
+              <div class="common-title">
+                <a href=""
+                  >Read More &nbsp;&nbsp;<i
+                    class="fa-solid fa-arrow-right-long"
+                  ></i
+                ></a>
+              </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <!--========================blog Section===========================-->
+
+  <footer>
+    <section class="information">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="./images/Finsweet logo 1.png" alt="">
+            <p class="description">We are always open to discuss your project and improve your online presence.</p>
+
+            <div class="info d-flex">
+              <div class="email">
+                <h4>Email me at</h4>
+                <p>contact@website.com</h4>
+              </div>
+              <div class="phone">
+                <h4>Call us</h4>
+                <p>0927 6277 28525</h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <h2 class="title">Lets Talk!</h2>
+            <p class="description"> We are always open to discuss your project, improve your online presence and help
+              with your UX/UI design challenges.</p>
+            <div class="social_icons">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-linkedin"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="Copyright-info">
+      <nav class="navbar navbar-expand-lg  ">
+        <div class="container py-3">
+          <!-- logo -->
+          <a class="navbar-brand" href="#">Copyright 2022, Finsweet.com</a>
+          <!-- logo -->
+          <!-- collaps for small device -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fa-solid fa-list"></i>
+            <!-- <span class="navbar-toggler-icon"></span> -->
+          </button>
+
+          <!-- collaps for small device -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">FAQ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+    </section>
+  </footer>
     <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
