update staller section

--- a/index.html
+++ b/index.html
@@ -507,31 +507,27 @@
         </div>
       </div>
     </section>
-    <!--========================FAQ Section===============================-->
-    <section class="stellar">
-      <div class="container">
-        <div class="content_container">
-          <img src="./images/stellar/banner-2.png" alt="" />
-          <div class="overly">
-            <h2 class="title">
-              <span>Building stellar</span> <span>websites for</span> early
-              startups
-            </h2>
-            <p >
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua ut
-              enim.
-            </p>
-          </div>
-        </div>
-        <div class="inquiry_input">
-          <h4 class="sub-title">Send inquiry</h4>
+    
+<!--========================Stellar Section===============================-->
+<section class="stellar">
+  <div class="container">
+  <div class="row">
+    <div class="col-lg-6">
+      
+      <img src="./images/stellar/banner-2.png" alt="">
+      <div class="overly">
+        <h2><span>Building stellar</span> <span>websites for</span> early startups</h2>
+        <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</span> <span>sed do eiusmod tempor incididunt ut labore et dolore</span> magna aliqua ut enim.</p>
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <h2>Send inquiry</h2>
           <p >
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore.
           </p>
 
-          <form action="" class="col-auto">
+          <form>
             <input
               type="text"
               class="form-inputs"
@@ -561,9 +557,10 @@
               ></a>
             </div>
           </form>
-        </div>
-      </div>
-    </section>
+    </div>
+  </div>
+  </div>
+</section>
     <!--========================blog Section===========================-->
      <section class="our_blog">
       <div class="container">
@@ -654,6 +651,7 @@
         </div>
       </div>
     </section>
+    <!--========================footer Section===========================-->
     <footer>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
