update steller part

--- a/index.html
+++ b/index.html
@@ -511,54 +511,38 @@
 <!--========================Stellar Section===============================-->
 <section class="stellar">
   <div class="container">
-  <div class="row">
-    <div class="col-lg-6">
-      
-      <img src="./images/stellar/banner-2.png" alt="">
-      <div class="overly">
-        <h2><span>Building stellar</span> <span>websites for</span> early startups</h2>
-        <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</span> <span>sed do eiusmod tempor incididunt ut labore et dolore</span> magna aliqua ut enim.</p>
-      </div>
-    </div>
-    <div class="col-lg-6">
-      <h2>Send inquiry</h2>
-          <p >
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore.
-          </p>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="contact-image-box">
+          <img src="./images/stellar/banner-2.png" alt="">
+          <div class="overlay">
+            <h3><span>Building stellar</span> <span>websites for</span> early startups</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+          </div>
 
-          <form>
-            <input
-              type="text"
-              class="form-inputs"
-              id="inputPassword2"
-              placeholder="Your Name"
-            />
-            <input
-              type="email"
-              class="form-inputs"
-              id="inputPassword2"
-              placeholder="Email"
-            />
-            <input
-              type="password"
-              class="form-inputs"
-              id="inputPassword2"
-              placeholder="Password"
-            />
+        </div>
+
+      </div>
+      <div class="col-lg-6">
+        <div class="contact-input-box">
+          <h5>Send inquiry</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+          <form >
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Paste your Figma design URL">
             <div class="navbar-button">
-              <a class="" href="">Send an inquiry</a>
+              <a href="">Send an Inquiry</a>
             </div>
+            
             <div class="common-title">
-              <a href=""
-                >Get in touch with us &nbsp;&nbsp;<i
-                  class="fa-solid fa-arrow-right-long"
-                ></i
-              ></a>
+              <a href="">Get in touch with us &nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></a>
             </div>
           </form>
+
+        </div>
+      </div>
     </div>
-  </div>
   </div>
 </section>
     <!--========================blog Section===========================-->
